--- a/package.json
+++ b/package.json
@@ -4,29 +4,33 @@
   "scripts": {
     "build": "tsc --build --clean && tsc",
     "lint": "eslint src/**/*.ts",
-    "start": "npm run lint && npm run build && npm run dev",
-    "test": "npm run build && ava",
+    "start": "yarn lint && yarn build && yarn dev",
+    "test": "yarn build && ava",
     "dev": "node ./dist/src/index.js"
   },
   "dependencies": {
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "pg": "^8.7.3",
     "typeorm": "^0.2.37",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@ava/typescript": "^2.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.2",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "ava": "^3.15.0",
     "eslint": "^7.32.0",
     "fs-extra": "^10.0.0",
-    "typescript": "~4.3",
-    "ava": "^3.15.0",
-    "@ava/typescript": "^2.0.0"
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.0",
+    "typescript": "~4.3"
   },
   "ava": {
     "files": [
