--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.1'
 
 services:
+  app:
+    image: node:14-alpine
+    working_dir: /app
+    volumes:
+      - ./:/app
+    ports:
+      - 5000:5000
+    command: sh -c "yarn && yarn start"
+    depends_on:
+      - db
   db:
     image: postgres
     restart: always
